--- a/config.yaml
+++ b/config.yaml
@@ -10,6 +10,9 @@ languages:
   cn:
     languageName: 中文
     weight: 1
+  en:
+    languageName: English
+    weight: 1
 
 defaultContentLanguage: cn
 # Force a locale to be use, really useful to develop the application ! Should be commented in production, the "weight" should rocks.
