--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -1,20 +1,18 @@
 # some information about you
-name: "John Doe"
-nickname: "John"
+name: "Xinyu Li"
+nickname: "Croak"
 # greeting message before your name. it will default to "Hi! I am" if not provided
 greeting: "Hi, I am"
-image: "images/author/john.png"
+image: "images/author/croak.jpg"
 # give your some contact information. they will be used in the footer
 contactInfo:
-  email: "johndoe@example.com"
-  phone: "+0123456789"
-  github: johndoe
-  linkedin: johndoe
+  email: "croakexciting@gmail.com"
+  phone: "+8613073676596"
+  github: dianshao-embedded
 
 # some summary about what you do
 summary:
   - I am a Developer
-  - I am a Devops
-  - I love servers
-  - I work on open-source projects
-  - I love to work with some fun projects
+  - I am proficient in RTOS, Embedded Linux, Golang development
+  - I am proficient in Yocto Linux development
+  - I work on open-source Embedded Linux Devops projects
