--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -12,53 +12,32 @@ section:
 buttons:
 - name: All
   filter: "all"
-- name: Professional
-  filter: "professional"
-- name: Academic
-  filter: "academic"
 - name: Hobby
   filter: "hobby"
 
 # your projects
 projects:
-- name: Kubernetes
-  logo: /images/sections/projects/kubernetes.png
-  role: Contributor
-  timeline: "March 2018 - Present"
-  repo: https://github.com/kubernetes/kubernetes # If your project is a public repo on GitHub, then provide this link. it will show star count.
+- name: Dianshao
+  logo: /images/sections/projects/dianshao.png
+  role: Maintainer
+  timeline: "2021.11 - "
+  #repo: https://github.com/dianshao-embedded/dianshao # If your project is a public repo on GitHub, then provide this link. it will show star count.
+  url: https://dianshao-embedded.github.io/dianshao-docs/
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: Production-Grade Container Scheduling and Management.
-  tags: ["professional", "kubernetes", "cloud"]
+  summary: An Embedded Linux Project Build and Compile Tool -- An Bitbake UI Extension
+  tags: ["hobby", "yocto", "embedded-linux"]
 
-- name: Tensorflow
-  logo: /images/sections/projects/tensorflow.png
-  role: Developer
-  timeline: "Jun 2018 - Present"
-  repo: https://github.com/tensorflow/tensorflow
-  #url: ""
-  summary: An Open Source Machine Learning Framework for Everyone.
-  tags: ["professional", "machine-learning"]
+- name: Dishes
+  role: Maintainer
+  timeline: "2022.3 - "
+  #repo: https://github.com/dianshao-embedded/dishes-admin.git
+  url: "https://dianshao-embedded.github.io/dishes-docs/"
+  summary: An Embedded Device OTA Platform
+  tags: ["hobby", "ota"]
 
-- name: A sample academic paper
-  role: Team Lead
-  timeline: "Jan 2017 - Nov 2017"
-  url: "https://www.example.com"
-  summary: Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eius reprehenderit animi suscipit autem eligendi esse amet aliquid error eum. Accusantium distinctio soluta aliquid quas placeat modi suscipit eligendi nisi.
-  tags: ["academic","iot"]
-
-- name: Nocode
-  logo: /images/sections/projects/no-code.png
-  role: Nothing
-  timeline: "Oct 2019 - Dec 2019"
-  repo: https://github.com/kelseyhightower/nocode
-  #url: ""
-  summary: The best way to write secure and reliable applications. Write nothing; deploy nowhere.
-  tags: ["hobby", "fun"]
-
-- name: Toha
-  logo: /images/sections/projects/toha.png
-  role: Owner
-  timeline: "Jun 2019 - Present"
-  repo: https://github.com/hossainemruz/toha
-  summary: A Hugo theme for personal portfolio.
-  tags: ["hobby","hugo","theme","professional"]
+- name: Lorawan Gateway
+  role: Maintainer
+  timeline: "2022.3 - "
+  repo: "https://github.com/dianshao-embedded/lora-gateway-imx6ull.git"
+  summary: Lorawan Gateway terminal yocto project, also an example project of dianshao
+  tags: ["hobby","yocto", "lorawan", "iot"]
