--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -11,39 +11,47 @@ section:
 # Your Skills.
 # Give a summary of you each skill in the summary section.
 skills:
-- name: Kubernetes
-  logo: /images/sections/skills/kubernetes.png
-  summary: "Capable of deploying, managing application on Kubernetes. Experienced in writing Kubernetes controllers for CRDs."
-  url: "https://kubernetes.io/"
+- name: Yocto-Linux
+  logo: /images/sections/skills/yocto.png
+  summary: "Experienced in developing yocto-linux project, has completed ten projects based on yocto framework"
+  url: "https://www.yoctoproject.org/"
 
-- name: Go Development
+- name: RT-Thread
+  logo: /images/sections/skills/rt-thread.png
+  summary: "Experienced in using rt-thread rtos"
+  url: "https://www.rt-thread.org/"
+
+- name: C
+  logo: /images/sections/skills/c++.png
+  summary: "Using as the main language for professional development, mainly used for rtos project development"
+
+- name: Golang
   logo: /images/sections/skills/go.png
-  summary: "Using as the main language for professional development. Capable of writing scalable, testable, and maintainable program."
-  url: "https://golang.org/"
+  summary: "Using as the main language for professional development. Be familiar with frameworks such as gin, casbin"
 
-- name: Cloud Computing
-  logo: /images/sections/skills/cloud.png
-  summary: "Worked with most of the major clouds such as GCP, AWS, Azure etc."
+- name: Python
+  logo: /images/sections/skills/python.png
+  summary: "Using Django + Celery frameworks to develop my open-source software 'dianshao' "
+
+- name: Vue
+  logo: /images/sections/skills/vue.png
+  summary: "Using Vue to develop front-end project, sufficient for common needs"
+  url: "https://prometheus.io/"
 
 - name: Docker
   logo: /images/sections/skills/docker.svg
   summary: "Write most of the programs as dockerized container. Experienced with multi-stage, multi-arch build process."
   url: "https://www.docker.com/"
 
-- name: Prometheus
-  logo: /images/sections/skills/prometheus.png
-  summary: "Capable of setup, configure Prometheus metrics. Experienced with PromQL, AlertManager. Also, experienced with writing metric exporters."
-  url: "https://prometheus.io/"
+- name: LoRa
+  logo: /images/sections/skills/lora.jpg
+  summary: "Has developed a lorawan gateway, be familiar with lorawan protocol stack"
 
-- name: Linux
-  logo: /images/sections/skills/linux.png
-  summary: "Using as the main operating system. Capable of writing bash/shell scripts."
+- name: IOT
+  logo: /images/sections/skills/iot.jpg
+  summary: "Proficient in the design and development of IoT terminal equipment and the overall system"
 
 - name: Git
   logo: /images/sections/skills/git.png
   summary: "Experienced with git-based development. Mostly, use Github. Also, have experience in working with GitLab."
   url: "https://git-scm.com/"
-
-- name: C++
-  logo: /images/sections/skills/c++.png
-  summary: "Know basic C/C++ programming. Used for contest programming and problem solving."
