--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -14,8 +14,8 @@ designation: Software Engineer
 #  name: Example Co.
 #  url: "https://www.example.com"
 
-# your resume. this file path should be relative to you "static" directory
-# resume: "files/resume.pdf"
+#your resume. this file path should be relative to you "static" directory
+resume: "files/lxy-resume.pdf"
 
 # a summary about you
 summary: 'I am a full stack software engineer with 5 years of working experience. The main work experience is satellite IoT device development, satellite communication module development, IoT device management platform development.
