--- a/config.yaml
+++ b/config.yaml
@@ -50,9 +50,9 @@ params:
   # Provide logos for your site. The inverted logo will be used in the initial
   # transparent navbar and the main logo will be used in the non-transparent navbar.
   logo:
-    main: /images/site/main-logo.png
-    inverted: /images/site/inverted-logo.png
-    favicon: /images/site/favicon.png
+    main: /images/author/croak.jpg
+    inverted: /images/author/croak.jpg
+    favicon: /images/author/croak.jpg
 
   # GitHub repo of your site
   gitRepo: https://github.com/hugo-toha/hugo-toha.github.io
